force-app/main/default/objects/RateAdjustmentByDownPayment__c/RateAdjustmentByDownPayment__c.object-meta.xml
<CustomObject>
    <label>RateAdjustmentByDownPayment</label>
    <nameField>
        <label>RateAdjustmentByDownPayment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RateAdjustmentByDownPayments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>