force-app/main/default/objects/RateAdjustmentByDownPayment__c/fields/TierType__c.field-meta.xml
<CustomField>
    <fullName>TierType__c</fullName>
    <label>TierType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>