force-app/main/default/objects/RateAdjustmentByDownPayment__c/fields/TierValue__c.field-meta.xml
<CustomField>
    <fullName>TierValue__c</fullName>
    <label>TierValue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>