force-app/main/default/objects/RateAdjustmentByDownPayment__c/fields/UpperBound__c.field-meta.xml
<CustomField>
    <fullName>UpperBound__c</fullName>
    <label>UpperBound</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>